--- a/css/design_12.css
+++ b/css/design_12.css
@@ -47,15 +47,18 @@
 	height:550px;
 	width:100%;
 }
-.layout{
+.search .layout{
 	background-color:gray;
 	width:200px;
 	height:50px;
 	margin-top:200px;
 }
-.symbol{
-	background-color:#0D42FF;
+.search .symbol{
+	background-color:white;
 	margin-top:200px;
+	height:50px;
+	width:100px;
+	margin-left:5px;
 }
 .footer{
 	display:flex;
